--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 welcome.message: Hello World !!!
-
 server.contextPath=/inv
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.url = jdbc:mysql://localhost:3306/invensistest
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
