--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.contextPath=/inv
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/invensistest
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = root
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
